			   XPCE ChangeLog
			   ==============

* FIXED: Many issues to subwindow layout handling for the user.  Added new
  class tile_adjuster for this purpose.

* FIXED: Proper handling of class-variable inheritence for class-variables
  associated with normal variables.

* ADDED: `stream ->input_message' to check whether the stream is already
  open and then attach asynchronous input handling.


VERSION 5.1.10, distributed with SWI-Prolog 4.0.11
==================================================

* PORT: make FN (required for building XPCE) not depend on bash extensions
  to sh (Lourens van der Meij).

* FIXED: load .ICO files.  Possibly caused by recent delay in opening the
  display. (Spotted by Fabien Todescato).

* ENHANCED: PceEmacs LaTeX mode to handle `"' normally in verbatim and
  code environment.

* FIXED: Text format (string->initialise, <many classes>->format) to
  check for buffer overflows and report gracefully rather than
  uncontrolled after buffer overrun.  Removed the limit altogether
  on all methods where long output is considered mor or less `normal',
  such as string->initialise, string->format, stream->format,
  editor->format, etc.

* ADDED: `prolog_term->equal' to test for Prolog equality on terms.

* ADDED: library(pce_toc): allow for the use of arbitrary graphicals as
  label of nodes.

* FIXED: `text_item->clear' to set the item to modified, so <-selection
  indeed returns ''.

* ADDED: Default binding of Control-Z to undo in editor.

* FIXED: Memory leak in class code_vector.

* PORT: Included some portability issues in unx/process.c, socket handling
  and make version detection for NetBSD 1.5.2.  Contributed by John Towler.
  Incomplete.

* MAINTAIN: Unix Makefile: fixed pl-static target to call xpce dependency

* ADDED: Avoid opening the display during XPCE's initialisation.  This
  allows for XPCE applications without doing graphics.


VERSION 5.1.9, distributed with SWI-Prolog 4.0.10
=================================================
